[package]
name = "inkan-key-management-module"
version = "0.1.0"
edition = "2021"
authors = ["Inkan Development Team"]
description = "Key management module for Inkan document verification system"
license = "MIT"

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptographic dependencies
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
x25519-dalek = "2.0"
rand = "0.8"
rand_core = "0.6"
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"
zerocopy = "0.7"
aes-gcm = "0.10"
pbkdf2 = "0.12"
hmac = "0.12"

# File and storage dependencies
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
